Update for change in SIS internal API relative to collections.